changed some css and fixed error about product info not showing data

--- a/client/src/pages/shopPage/ShopPage.scss
+++ b/client/src/pages/shopPage/ShopPage.scss
@@ -3,14 +3,49 @@
 	flex-direction: column;
 }
 .shopNavbar {
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 1000;
+	width: 100%;
+	max-height: 55px;
+
+	opacity: 1;
+	visibility: visible;
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	background-color: rgb(203, 237, 237);
-	padding: 35px;
-	margin: 25px 0px 25px 0px;
+	background-color: rgb(69, 8, 181);
+	color: white;
+	padding: 0px;
+	margin: 0px 0px 25px 0px;
+
+	body.header-not-at-top {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		background-color: blue;
+	}
+	@at-root {
+		body.header-not-at-top {
+			padding-top: 44px;
+		}
+	}
 }
+#top-of-site-pixel-anchor {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	top: 500px;
+	left: 0;
+	background-color: green;
+}
+
 .shopNavbarHeading {
 	padding: 20px;
 	font-size: 24px;
@@ -155,14 +190,24 @@
 
 .productInformationsName {
 	text-align: left;
+	text-align: center;
 	width: 100%;
 	margin-left: 10px;
 	height: min-content;
 	padding: 0px;
 	margin: 0px;
 }
+.productInformations {
+	text-align: center;
+}
 .productInformations b:hover {
 	text-decoration: underline;
+}
+.discount2 {
+	text-align: right;
+	font-size: 26px;
+	color: rgb(216, 0, 0);
+	font-weight: 600;
 }
 .productPriceStrikethrough {
 	text-align: center;
@@ -317,7 +362,7 @@
 .productDescription {
 	margin: 15px;
 	margin-left: 35px;
-	padding: 40px 25px 40px 85px;
+	padding: 40px 85px 40px 85px;
 	width: 400px;
 	height: max-content;
 	background-color: transparent;
@@ -327,6 +372,7 @@
 	border: 1px solid #e2e2e2;
 	white-space: pre-wrap;
 	word-wrap: break-word;
+	font-size: 20px;
 }
 .productInfos {
 	text-align: justify;
